<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        <item
            android:id="@+id/nav_friends_list"
            android:title="Friends List" />
        <item
            android:id="@+id/nav_graph"
            android:title="Weekly Progress Graph" />
        <item
            android:id="@+id/nav_logout"
            android:title="Logout" />
</menu>