...
        android:layout_weight="1"
        android:textSize="20sp"
        android:gravity="end"
        android:layout_gravity="end"/>

    <Button
        android:id="@+id/btn_walk_end"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_end"
        android:background="#ff0000"
        android:paddingRight="10sp"
...
